# Super-HelloWorld

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SPEC.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
src/: __init__.py  cli.py  main.py
src/cloud/: __init__.py  log_uploader.py
src/core/: __init__.py
src/core/adapter_layer/: __init__.py  buffer_stack.py  protocol_adapter.py  stream_adapter.py
src/core/device_layer/: __init__.py  character_reader.py  device_interface.py  device_manager.py
src/core/device_layer/devices/: __init__.py  cloud_device.py  console_device.py  file_device.py  network_device.py
src/core/processing_layer/: __init__.py  ir_transpiler.py  output_stream.py  renderer.py  scheduler.py  security_monitor.py
src/ir/: __init__.py  ir_representation.py
src/ir/targets/: __init__.py  cpp_target.py  java_target.py  javascript_target.py  rust_target.py  wasm_target.py
tests/: __init__.py  test_all.py
